--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,44 +1,49 @@
-import sys
-import os
-import pytest
-from flask import session
+name: Run Flask Quiz App Tests
 
-# Add the root directory to sys.path for import
-sys.path.append(os.path.abspath(os.path.join(os.path.dirname(__file__), '..')))
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-from app import app
+jobs:
+  test:
+    runs-on: ubuntu-latest
 
-@pytest.fixture
-def client():
-    app.config['TESTING'] = True
-    app.config['SECRET_KEY'] = 'test'
-    with app.test_client() as client:
-        with app.app_context():
-            yield client
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: srishti@2004
+          MYSQL_DATABASE: quiz_app1
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
-def test_login_page_loads(client):
-    response = client.get('/login')
-    assert response.status_code == 200
-    assert b"login" in response.data.lower()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-def test_register_page_loads(client):
-    response = client.get('/register')
-    assert response.status_code == 200
-    assert b"register" in response.data.lower()
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-def test_protected_redirects_to_login(client):
-    response = client.get('/')
-    assert response.status_code == 302
-    assert '/login' in response.headers['Location']
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
 
-def test_quiz_get_requires_login(client):
-    response = client.get('/quiz')
-    assert response.status_code == 302
-    assert '/login' in response.headers['Location']
+      - name: Wait for MySQL
+        run: |
+          echo "Waiting for MySQL to be ready..."
+          sleep 25
 
-def test_home_with_login(client):
-    with client.session_transaction() as sess:
-        sess['username'] = 'testuser'
-    response = client.get('/')
-    assert response.status_code == 200
-    assert b"home" in response.data.lower()
+      - name: Run tests
+        run: |
+          pytest tests/
