--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,20 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: ✅ Checkout code
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: 🐍 Set up Python
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: 📦 Install dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask pytest
+        pip install -r requirements.txt
 
-    - name: 🚀 Run Pytest
-      run: |
-        export PYTHONPATH=$PYTHONPATH:$(pwd)
-        pytest tests/
+    - name: Add project root to PYTHONPATH
+      run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+
+    - name: Run tests with pytest
+      run: pytest tests/
