--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,29 +1,23 @@
 name: Python CI with Pytest
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Match your test environment
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest pytest-cov flask
+        pip install flask pytest
 
-    - name: Run tests with pytest
+    - name: Run tests
       run: |
-        pytest tests/ --verbose --cov=app
+        pytest tests/ -v
