--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,10 +1,15 @@
 name: Python CI with Pytest
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
 
@@ -16,8 +21,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask pytest
+        pip install flask pytest mysql-connector-python
 
     - name: Run tests
       run: |
         pytest tests/ -v
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: test-results
+        path: |
+          test-reports/
+          .pytest_cache/
