--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flask pytest
+        pip install flask pytest  # Only install Flask and pytest (no MySQL)
 
     - name: Run tests
       run: |
-        pytest
+        pytest  # Runs all your non-database tests
